2006-02-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new components: switch, relais, AM- and PM-modulator
	* correct path for files loaded via command line
	* catch wrong characters for components names on schematic
	* sources all have initial rotation angle as in icon

2006-02-18  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* load resistors with backward compatibility
	* diagram dialog of tabular: default number representation mag/deg
	* change dialog fixed
	* correct VDHL time for gates
	* s-parmeter file component with chooseable port number
	* inout attribut for subcircuit port
	* fixed bug to allow more than 1 subcircuit in VHDL

2006-02-13  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* language can be set in settings dialog

2006-01-31  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (TRANSLATIONS): Added Ukrainian translations
	files.

2006-01-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* if manual grid too small set it to whole length

2006-01-16  Stefan Jahn  <stefan@lkcc.org>

	* qucs_jp.ts: Updated Japanese translation.  Thanks to
	Toyoyuki.

	* dialogs/simmessage.cpp (slotDisplayMsg): Fixed progress
	bar parsing for Win32 platforms.

2006-01-14  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* qucsdigi script can run complete digital simulation
	* check time formats for VHDL standard
	* correct truth table simulation

2006-01-05  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new component: coupler
	* timing diagram shows change of state at begin and end
	* new digital components: RS, D and JK flip flop
	* fixed bug that removed labels after subcircuit update
	* set subcircuit port attribut "analog" to "inout" (VHDL)

2006-01-04  Stefan Jahn  <stefan@lkcc.org>

	* qucs_tr.ts: Applied Turkish translations.  Thanks to
	Onur and Ozgur!

2005-12-30  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed errors for truth table in diagram dialog