@@ -3355,10 +3355,6 @@ Use:  qucsedit [-r] archivo
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>switch (time controled)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <source>initial state</source>
         <translation type="unfinished"></translation>
     </message>
@@ -3372,6 +3368,10 @@ Use:  qucsedit [-r] archivo
     </message>
     <message>
         <source>attenuation factor per length in 1/m</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>switch (time controlled)</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
