@@ -3349,10 +3349,6 @@ Invocation :  qucsedit [-r] fichier
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>switch (time controled)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <source>initial state</source>
         <translation type="unfinished"></translation>
     </message>
@@ -3366,6 +3362,10 @@ Invocation :  qucsedit [-r] fichier
     </message>
     <message>
         <source>attenuation factor per length in 1/m</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>switch (time controlled)</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
