@@ -3401,10 +3401,6 @@ Stosowanie:  qucsedit [-r] plik
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>switch (time controled)</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <source>initial state</source>
         <translation type="unfinished"></translation>
     </message>
@@ -3418,6 +3414,10 @@ Stosowanie:  qucsedit [-r] plik
     </message>
     <message>
         <source>attenuation factor per length in 1/m</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>switch (time controlled)</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
