@@ -1,3 +1,11 @@
+2006-02-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* diagrams/diagram.cpp: Improved speed while loading datasets
+	under Win32 by a strtod() replacement.
+
+	* qucs.cpp (slotChangePage): Fixed small bug on Win32
+	platforms.
+
 2006-02-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* new components: switch, relais, AM- and PM-modulator
